--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"next": "13.2.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hot-toast": "^2.4.1",
+		"react-icons": "^4.12.0",
 		"typescript": "5.1.6"
 	},
 	"devDependencies": {
