--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"eslint-config-next": "13.4.18",
 		"next": "13.2.4",
 		"react": "18.2.0",
+		"react-audio-player": "^0.17.0",
 		"react-dom": "18.2.0",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.12.0",
