--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "xmasmusic",
 	"version": "0.1.0",
-	"private": true,
+	"private": false,
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -14,17 +14,16 @@
 		"@types/react-dom": "18.2.7",
 		"eslint": "8.47.0",
 		"eslint-config-next": "13.4.18",
-		"next": "13.2.4",
+		"next": "13.4.20-canary.13",
+		"postcss": "^8.4.33",
 		"react": "18.2.0",
 		"react-device-detect": "^2.2.3",
 		"react-dom": "18.2.0",
-		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.12.0",
 		"typescript": "5.1.6"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.15",
-		"postcss": "8.4.31",
 		"tailwindcss": "^3.3.3"
 	}
 }
