--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"@types/react-dom": "18.2.7",
 		"eslint": "8.47.0",
 		"eslint-config-next": "13.4.18",
-		"next": "13.4.20-canary.13",
-		"postcss": "^8.4.33",
+		"next": "^13.4.20-canary.13",
+		"postcss": "^8.4.32",
 		"react": "18.2.0",
 		"react-device-detect": "^2.2.3",
 		"react-dom": "18.2.0",
