--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"@types/react-dom": "18.2.7",
 		"eslint": "8.47.0",
 		"eslint-config-next": "13.4.18",
-		"next": "^13.4.20-canary.13",
+		"next": "^14.1.1",
 		"postcss": "^8.4.32",
 		"react": "18.2.0",
 		"react-device-detect": "^2.2.3",
